<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="cat_textfield_title" translatable="false">Text Field</string>
  <string name="cat_textfield_filled_demo_title" translatable="false">Filled Text Field Demo</string>
  <string name="cat_textfield_filled_icons_demo_title" translatable="false">Filled Icons Text Field Demo</string>
  <string name="cat_textfield_exposed_dropdown_menu_demo_title" translatable="false">展开下拉菜单演示</string>
  <string name="cat_textfield_outlined_demo_title" translatable="false">Outlined Text Field Demo</string>
  <string name="cat_textfield_outlined_icons_demo_title" translatable="false">Outlined Icons Text Field Demo</string>
  <string name="cat_textfield_prefix_suffix_demo_title" translatable="false">前缀和后缀文本字段演示</string>
  <string name="cat_textfield_legacy_demo_title" translatable="false">旧版文本字段演示</string>
  <string name="cat_textfield_description" translatable="false">
    文本字段允许用户输入、编辑和选择文本。文本字段通常驻留在表单中，但也可以出现在其他位置，例如对话框和搜索。
  </string>

  <string name="cat_textfield_filled_helper_text" translatable="false">填充文本字段</string>
  <string name="cat_textfield_filled_dense_helper_text" translatable="false">密集填充的文本字段</string>
  <string name="cat_textfield_filled_dense_password_helper_text" translatable="false">
    密集填充的密码文本字段
  </string>
  <string name="cat_textfield_filled_start_icon_helper_text" translatable="false">Filled start icon text field</string>
  <string name="cat_textfield_filled_start_end_icons_helper_text" translatable="false">Filled start and end icons text field</string>
  <string name="cat_textfield_filled_clear_button_helper_text" translatable="false">Filled clear button text field</string>
  <string name="cat_textfield_filled_custom_end_icon_helper_text" translatable="false">Filled custom end icon text field</string>
  <string name="cat_textfield_filled_exposed_dropdown_helper_text" translatable="false">Filled exposed dropdown menu</string>
  <string name="cat_textfield_filled_editable_exposed_dropdown_helper_text" translatable="false">Filled editable exposed dropdown menu</string>
  <string name="cat_textfield_legacy_helper_text" translatable="false">Legacy text field</string>
  <string name="cat_textfield_outlined_helper_text" translatable="false">Outlined text field</string>
  <string name="cat_textfield_outlined_dense_helper_text" translatable="false">Dense outlined text field</string>
  <string name="cat_textfield_outlined_dense_password_helper_text" translatable="false">
    Outlined filled password text field
  </string>
  <string name="cat_textfield_outlined_start_icon_helper_text" translatable="false">Outlined start icon text field</string>
  <string name="cat_textfield_outlined_start_end_icons_helper_text" translatable="false">Outlined start and end icons text field</string>
  <string name="cat_textfield_outlined_clear_button_helper_text" translatable="false">Outlined clear button text field</string>
  <string name="cat_textfield_outlined_custom_end_icon_helper_text" translatable="false">Outlined custom end icon text field</string>
  <string name="cat_textfield_custom_end_icon_content_description" translatable="false">Custom end icon</string>
  <string name="cat_textfield_custom_start_icon_content_description" translatable="false">Custom start icon</string>
  <string name="cat_textfield_outlined_exposed_dropdown_helper_text" translatable="false">Outlined exposed dropdown menu</string>
  <string name="cat_textfield_outlined_editable_exposed_dropdown_helper_text" translatable="false">Outlined editable exposed dropdown menu</string>

  <string name="cat_textfield_prefix" translatable="false">$</string>
  <string name="cat_textfield_suffix" translatable="false">/100</string>
  <string name="cat_textfield_outlined_prefix_helper_text" translatable="false">带前缀的轮廓文本字段</string>
  <string name="cat_textfield_outlined_prefix_icon_helper_text" translatable="false">带有前缀和图标的轮廓文本字段</string>
  <string name="cat_textfield_outlined_suffix_helper_text" translatable="false">带后缀的轮廓文本字段</string>
  <string name="cat_textfield_outlined_suffix_icon_helper_text" translatable="false">带有后缀和图标的轮廓文本字段</string>
  <string name="cat_textfield_filled_prefix_helper_text" translatable="false">带前缀的填充文本字段</string>
  <string name="cat_textfield_filled_prefix_icon_helper_text" translatable="false">带有前缀和图标的填充文本字段</string>
  <string name="cat_textfield_filled_suffix_helper_text" translatable="false">带后缀的填充文本字段</string>
  <string name="cat_textfield_filled_suffix_icon_helper_text" translatable="false">带有后缀和图标的填充文本字段</string>

  <string name="cat_textfield_customize_section_title" translatable="false">自定义文本字段</string>
  <string name="cat_textfield_customize_section_description" translatable="false">
    输入下面的值以自定义上面的文本字段。按键盘“完成”按钮更新每个字段，或按底部的更新按钮一次更新所有字段.
  </string>
  <string name="cat_textfield_label" translatable="false">Label</string>
  <string name="cat_textfield_password" translatable="false">Password</string>
  <string name="cat_textfield_error" translatable="false">错误</string>
  <string name="cat_textfield_placeholder_text" translatable="false">占位符文本</string>

  <string name="cat_textfield_customize_counter_text" translatable="false">更新字符计数器最大值</string>
  <string name="cat_textfield_customize_label_text" translatable="false">更新标签文本</string>
  <string name="cat_textfield_customize_error_text" translatable="false">更新错误文本</string>
  <string name="cat_textfield_customize_helper_text" translatable="false">更新帮助文本</string>
  <string name="cat_textfield_customize_placeholder_text" translatable="false">更新占位符文本</string>

  <string name="cat_textfield_null_input_error_text" translatable="false">输入一个值</string>
  <string name="cat_textfield_show_error_text" translatable="false">显示错误</string>
  <string name="cat_textfield_hide_error_text" translatable="false">隐藏错误</string>

  <string-array name="cat_textfield_exposed_dropdown_content" translatable="false">
    <item>Item 1</item>
    <item>Item 2</item>
    <item>Item 3</item>
    <item>Item 4</item>
  </string-array>

  <string name="cat_textfield_show_leading_icon" translatable="false">Show leading icon</string>
  <string name="cat_textfield_hide_leading_icon" translatable="false">Hide leading icon</string>
  <string name="cat_textfield_update_button" description="Button to update customizable fields.[CHAR_LIMIT=NONE]">Update</string>

  <string name="cat_textfield_label_enabled" description="Label on a switch to enable text fields.[CHAR_LIMIT=10]">启用文本字段</string>
  <string name="cat_textfield_label_disabled" translatable="false">禁用文本字段</string>

  <string name="cat_textfield_toast_update_button" description="Announcement for when update button is clicked.[CHAR_LIMIT=NONE]">文本字段已更新。</string>
  <string name="cat_textfield_toast_label_text" description="Announcement for when label is updated.[CHAR_LIMIT=NONE]">标签已更新.</string>
  <string name="cat_textfield_toast_error_text" description="Announcement for when error text is updated.[CHAR_LIMIT=NONE]">错误消息已更新.</string>
  <string name="cat_textfield_toast_helper_text" description="Announcement for when helper text is updated.[CHAR_LIMIT=NONE]">帮助文本已更新.</string>
  <string name="cat_textfield_toast_counter_text" description="Announcement for when counter max is updated.[CHAR_LIMIT=NONE]">最大计数器已更新.</string>
  <string name="cat_textfield_toast_placeholder_text" description="Announcement for when placeholder text is updated.[CHAR_LIMIT=NONE]">占位符已更新.</string>
  <string name="cat_textfield_toast_error_icon_click" description="Announcement for when error icon is clicked.[CHAR_LIMIT=NONE]">单击了错误图标.</string>
  <string name="cat_textfield_toast_error_icon_long_click" description="Announcement for when error icon is long clicked.[CHAR_LIMIT=NONE]">长按错误图标.</string>
  <string-array name="link_resource_title">
    <item>属性</item>
    <item>常用效果</item>
  </string-array>
  <string-array name="lin_resource_url">
    <item>https://m3.material.io/components/text-fields/overview</item>
    <item>https://m3.material.io/components/text-fields/usage</item>
  </string-array>
  <string name="non_material_text_view_main_demo_title">TextView</string>
  <string name="non_material_text_view_spanable_title">SpanableString</string>
  <string name="non_material_text_view_marquee_example">这是一个跑马灯的示例</string>
  <string name="non_material_text_view_shadow_example">这是一个阴影的的示例</string>
  <string name="non_material_spanable_string_span_absolutesizespan">AbsoluteSizeSpan</string>
  <string name="non_material_spanable_string_span_BackgroundColorSpan">BackgroundColorSpan</string>
  <string name="non_material_spanable_string_span_ClickableSpan">ClickableSpan</string>
  <string name="non_material_spanable_string_span_ImageSpan">ImageSpan</string>
  <string name="non_material_spanable_string_span_ForegroundColorSpan">ForegroundColorSpan</string>
  <string name="non_material_spanable_string_span_LocalSpan">LocalSpan</string>
  <string name="non_material_spanable_string_span_MaskFilterSpan">MaskFilterSpan</string>
  <string name="non_material_spanable_string_span_RelativeSizeSpan">RelativeSizeSpan</string>
  <string name="non_material_spanable_string_span_ScaleXSpan">ScaleXSpan</string>
  <string name="non_material_spanable_string_span_StrikethroughSpan">StrikethroughSpan</string>
  <string name="non_material_spanable_string_span_StyleSpan">StyleSpan</string>
  <string name="non_material_spanable_string_span_SubscriptSpan">SubscriptSpan</string>
  <string name="non_material_spanable_string_span_SuperscriptSpan">SuperscriptSpan</string>
  <string name="non_material_spanable_string_span_TextAppearanceSpan">TextAppearanceSpan</string>
  <string name="non_material_spanable_string_span_URLSpan">URLSpan</string>
  <string name="non_material_spanable_string_span_UnderlineSpan">UnderlineSpan</string>
  <string name="non_material_spanable_string_span_TypefaceSpan">TypefaceSpan</string>


</resources>
